testing event listeners. Test 1

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         TITLU
     </h1>
     <div id = "conta"></div>
+    <button onclick="alert('I can say Hello!')">Click 1</button>
 </body>
 </html>
