--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         TITLU
     </h1>
     <div id = "conta"></div>
-    <button onclick="alert('I can say Hello!')">Click 1</button>
+    <button  ondblclick="alert('I pressed twice')">Doubleclick 1</button>
+    <button onclick="alert('Me too!')">Click 2</button>
+    <button id= "btn">Click 3</button>
 </body>
 </html>
