testing event listeners: Added named fuction to test all 3 metods. Test 4

--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
     <button  ondblclick="alert('I pressed twice')">Doubleclick 1</button>
     <button onclick="alert('Me too!')">Click 2</button>
     <button id= "btn">Click 3</button>
+    
+    <button onclick="alertFunction()">Functia Alert din HTML</button>
+    <button id = 'buton'>Functia Alert din JS</button>
+    <button id='buton2'>Functia Event Listener din JS</button>
 </body>
 </html>
