Added event listeners for a list of nodes. Test 5

--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
     <button  ondblclick="alert('I pressed twice')">Doubleclick 1</button>
     <button onclick="alert('Me too!')">Click 2</button>
     <button id= "btn">Click 3</button>
-    
+
     <button onclick="alertFunction()">Functia Alert din HTML</button>
     <button id = 'buton'>Functia Alert din JS</button>
     <button id='buton2'>Functia Event Listener din JS</button>
+    <button id ='ceva'>Sa vedem ce iasa</button>
+    <div id="butoane">
+        <button class="test" >1</button>
+        <button class="test">2</button>
+        <button class="test">3</button>
+    </div>
 </body>
 </html>
